[package]
name = "datetimeparse"
description = "Correct ISO 8601 and RFC3999 parsing and formatting"
license = "EUPL-1.2"
repository = "https://github.com/pingiun/datetimeparse"
documentation = "https://docs.rs/datetimeparse"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4", optional = true }

[features]
default = ["chrono"]
chrono = ["dep:chrono"]
